change mobile.scss, make sure tags visiable on mobile side. and login scss register scss

--- a/ElastosBountyProgram/front-end/src/module/page/register/style.scss
+++ b/ElastosBountyProgram/front-end/src/module/page/register/style.scss
@@ -5,7 +5,7 @@
   .d_box {
 
     padding: 0;
-    width: 60vw;
+    width: 80vw;
     margin: 80px auto 0;
     background: #ffffff;
   }
